--- a/Men.html
+++ b/Men.html
@@ -1,201 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Good quality outdoor jackets for men" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <title>Rainy Days | Men</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="Men.html">Men</a>
-      <a href="Men.html">Women</a>
-      <a href="cart.html">Cart</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <header class="header">
-      <a href="Index.html">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          class="mountain"
-          alt="Mountain logo"
-        />
-      </a>
-      <a href="cart.html">
-        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
-      </a>
-    </header>
-    <main>
-      <section class="new-in">
-        <h1 class="h2">Men</h1>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket1.png"
-              class="jacket"
-              alt="Rainy days 365"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 365</h3>
-            <p>Water ressistant</p>
-            <p>Breathable</p>
-            <p>1299 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Good quality outdoor jackets for men" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <title>Rainy Days | Men</title>
+  <!-- Hotjar Tracking Code for my site -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3395099, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="Men.html">Men</a>
+    <a href="Men.html">Women</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <header class="header">
+    <a href="Index.html">
+      <img src="logo/RainyDays_Logo_bare-fjellet.png" class="mountain" alt="Mountain logo" />
+    </a>
+    <a href="cart.html">
+      <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
+    </a>
+  </header>
+  <main>
+    <section class="new-in">
+      <h1 class="h2">Men</h1>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket1.png" class="jacket" alt="Rainy days 365" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 365</h3>
+          <p>Water ressistant</p>
+          <p>Breathable</p>
+          <p>1299 Nok</p>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket2.png"
-              class="jacket"
-              alt="Rainy days 265"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 265</h3>
-            <p>Breathable</p>
-            <p>999 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket3.png"
-              class="jacket"
-              alt="Rainy days 165"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 165</h3>
-            <p>Winter</p>
-            <p>Breathable</p>
-            <p>Water ressistant</p>
-            <p>1999 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket2.png" class="jacket" alt="Rainy days 265" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 265</h3>
+          <p>Breathable</p>
+          <p>999 Nok</p>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket3.png" class="jacket" alt="Rainy days 165" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 165</h3>
+          <p>Winter</p>
+          <p>Breathable</p>
+          <p>Water ressistant</p>
+          <p>1999 Nok</p>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
         </div>
-        <div class="product-container">
-          <a href="product.html">
-            <img
-              src="images/RainyDays_Jacket4.png"
-              class="jacket"
-              alt="Rainy days 65"
-            />
-          </a>
-          <div class="product-text">
-            <h3>Rainy days 65</h3>
-            <p>Water ressistant</p>
-            <p>1599 Nok</p>
-          </div>
-          <div>
-            <a href="cart.html" class="button">Add to cart</a>
-          </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
         </div>
-      </section>
-    </main>
-    <footer>
-      <h3>Contact</h3>
-      <p>Adress</p>
-      <p>5055 Bergen, Danmarksvegen 10</p>
-      <a href="Phone">Phone: +47 416 04 683</a>
-      <a href="Mail">Mail: Contact@Rainydays.com</a>
-    </footer>
-  </body>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
+        </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
+        </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
+        </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
+        </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
+        </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
+        </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
+        </div>
+      </div>
+      <div class="product-container">
+        <a href="product.html">
+          <img src="images/RainyDays_Jacket4.png" class="jacket" alt="Rainy days 65" />
+        </a>
+        <div class="product-text">
+          <h3>Rainy days 65</h3>
+          <p>Water ressistant</p>
+          <p>1599 Nok</p>
+        </div>
+        <div>
+          <a href="cart.html" class="button">Add to cart</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <h3>Contact</h3>
+    <p>Adress</p>
+    <p>5055 Bergen, Danmarksvegen 10</p>
+    <a href="Phone">Phone: +47 416 04 683</a>
+    <a href="Mail">Mail: Contact@Rainydays.com</a>
+  </footer>
+</body>
+
 </html>
