--- a/cart.html
+++ b/cart.html
@@ -1,64 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Your personal cart" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <title>Rainy Days | Cart</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="Men.html">Men</a>
-      <a href="Men.html">Women</a>
-      <a href="cart.html">Cart</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <header class="header">
-      <a href="Index.html">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          class="mountain"
-          alt="Mountain logo"
-        />
-      </a>
-      <a href="cart.html">
-        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
-      </a>
-    </header>
-    <main>
-      <h1>Cart</h1>
-      <div class="cart-container">
-        <img
-          src="images/RainyDays_Jacket1.png"
-          class="jacket"
-          alt="Rainy days 365"
-        />
-        <div class="product-text">
-          <h3>Rainy days 365</h3>
-          <p>Water ressistant</p>
-          <p>Breathable</p>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Your personal cart" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <title>Rainy Days | Cart</title>
+  <!-- Hotjar Tracking Code for my site -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3395099, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="Men.html">Men</a>
+    <a href="Men.html">Women</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <header class="header">
+    <a href="Index.html">
+      <img src="logo/RainyDays_Logo_bare-fjellet.png" class="mountain" alt="Mountain logo" />
+    </a>
+    <a href="cart.html">
+      <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
+    </a>
+  </header>
+  <main>
+    <h1>Cart</h1>
+    <div class="cart-container">
+      <img src="images/RainyDays_Jacket1.png" class="jacket" alt="Rainy days 365" />
+      <div class="product-text">
+        <h3>Rainy days 365</h3>
+        <p>Water ressistant</p>
+        <p>Breathable</p>
       </div>
-      <div class="total">
-        <p>Total</p>
-        <p>1299 Nok</p>
-      </div>
-      <div class="buttons">
-        <a href="Check-out.html" class="button">Order now</a>
-        <a href="Index.html" class="button">Continue shopping</a>
-      </div>
-      <div class="space"></div>
-    </main>
-    <footer>
-      <h3>Contact</h3>
-      <p>Adress</p>
-      <p>5055 Bergen, Danmarksvegen 10</p>
-      <a href="Phone">Phone: +47 416 04 683</a>
-      <a href="Mail">Mail: Contact@Rainydays.com</a>
-    </footer>
-  </body>
+    </div>
+    <div class="total">
+      <p>Total</p>
+      <p>1299 Nok</p>
+    </div>
+    <div class="buttons">
+      <a href="Check-out.html" class="button">Order now</a>
+      <a href="Index.html" class="button">Continue shopping</a>
+    </div>
+    <div class="space"></div>
+  </main>
+  <footer>
+    <h3>Contact</h3>
+    <p>Adress</p>
+    <p>5055 Bergen, Danmarksvegen 10</p>
+    <a href="Phone">Phone: +47 416 04 683</a>
+    <a href="Mail">Mail: Contact@Rainydays.com</a>
+  </footer>
+</body>
+
 </html>
