--- a/contact.html
+++ b/contact.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contact us for any questions" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <title>Rainy Days | Contact</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="Men.html">Men</a>
-      <a href="Men.html">Women</a>
-      <a href="cart.html">Cart</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <header class="header">
-      <a href="Index.html">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          class="mountain"
-          alt="Mountain logo"
-        />
-      </a>
-      <a href="cart.html">
-        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
-      </a>
-    </header>
-    <main>
-      <h1>Contact</h1>
-      <p>
-        If you have any problems or questions, please contact us and we will
-        answer as soon as possible.
-      </p>
-      <div class="textinput">
-        <input type="text" id="Name" name="Name" placeholder="Name" />
-        <input type="text" id="Phone-number" placeholder="Phone number" />
-        <p>Write your message in the box below</p>
-        <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
-      </div>
-      <div class="content"></div>
-      <div>
-        <a href="sucsess.html" class="button">Send message</a>
-      </div>
-      <div class="space"></div>
-    </main>
-    <footer>
-      <h3>Contact</h3>
-      <p>Adress</p>
-      <p>5055 Bergen, Danmarksvegen 10</p>
-      <a href="Phone">Phone: +47 416 04 683</a>
-      <a href="Mail">Mail: Contact@Rainydays.com</a>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact us for any questions" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <title>Rainy Days | Contact</title>
+  <!-- Hotjar Tracking Code for my site -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3395099, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="Men.html">Men</a>
+    <a href="Men.html">Women</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <header class="header">
+    <a href="Index.html">
+      <img src="logo/RainyDays_Logo_bare-fjellet.png" class="mountain" alt="Mountain logo" />
+    </a>
+    <a href="cart.html">
+      <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
+    </a>
+  </header>
+  <main>
+    <h1>Contact</h1>
+    <p>
+      If you have any problems or questions, please contact us and we will
+      answer as soon as possible.
+    </p>
+    <div class="textinput">
+      <input type="text" id="Name" name="Name" placeholder="Name" />
+      <input type="text" id="Phone-number" placeholder="Phone number" />
+      <p>Write your message in the box below</p>
+      <textarea id="freeform" name="Message" rows="4" cols="50"></textarea>
+    </div>
+    <div class="content"></div>
+    <div>
+      <a href="sucsess.html" class="button">Send message</a>
+    </div>
+    <div class="space"></div>
+  </main>
+  <footer>
+    <h3>Contact</h3>
+    <p>Adress</p>
+    <p>5055 Bergen, Danmarksvegen 10</p>
+    <a href="Phone">Phone: +47 416 04 683</a>
+    <a href="Mail">Mail: Contact@Rainydays.com</a>
+  </footer>
+</body>
+
 </html>
