--- a/resipt.html
+++ b/resipt.html
@@ -1,57 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="resipt" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <title>Rainy Days | Resipt</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="Men.html">Men</a>
-      <a href="Men.html">Women</a>
-      <a href="cart.html">Cart</a>
-      <a href="about.html">About us</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <header class="header">
-      <a href="Index.html">
-        <img
-          src="logo/RainyDays_Logo_bare-fjellet.png"
-          class="mountain"
-          alt="Mountain logo"
-        />
-      </a>
-      <a href="cart.html">
-        <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
-      </a>
-    </header>
-    <main>
-      <section>
-        <h1>Resipt</h1>
-        <p>Success!</p>
-        <p>Your order is confirmed!</p>
-        <p>
-          You will recieve an email within 24- hours. If you do not recieve an
-          email, please contact us on
-        </p>
-        <p>Rainydays@gmail.com</p>
-      </section>
-      <div class="content"></div>
-      <div>
-        <a href="Index.html" class="button">Continue shopping</a>
-      </div>
-      <div class="space"></div>
-    </main>
-    <footer>
-      <h3>Contact</h3>
-      <p>Adress</p>
-      <p>5055 Bergen, Danmarksvegen 10</p>
-      <a href="Phone">Phone: +47 416 04 683</a>
-      <a href="Mail">Mail: Contact@Rainydays.com</a>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="resipt" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <title>Rainy Days | Resipt</title>
+  <!-- Hotjar Tracking Code for my site -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 3395099, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="Men.html">Men</a>
+    <a href="Men.html">Women</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <header class="header">
+    <a href="Index.html">
+      <img src="logo/RainyDays_Logo_bare-fjellet.png" class="mountain" alt="Mountain logo" />
+    </a>
+    <a href="cart.html">
+      <img src="icons/shopping-cart.svg" class="cart" alt="Shopping icon" />
+    </a>
+  </header>
+  <main>
+    <section>
+      <h1>Resipt</h1>
+      <p>Success!</p>
+      <p>Your order is confirmed!</p>
+      <p>
+        You will recieve an email within 24- hours. If you do not recieve an
+        email, please contact us on
+      </p>
+      <p>Rainydays@gmail.com</p>
+    </section>
+    <div class="content"></div>
+    <div>
+      <a href="Index.html" class="button">Continue shopping</a>
+    </div>
+    <div class="space"></div>
+  </main>
+  <footer>
+    <h3>Contact</h3>
+    <p>Adress</p>
+    <p>5055 Bergen, Danmarksvegen 10</p>
+    <a href="Phone">Phone: +47 416 04 683</a>
+    <a href="Mail">Mail: Contact@Rainydays.com</a>
+  </footer>
+</body>
+
 </html>
